Version 0.4.2

  User-visible changes:
   * Change:
     # Abort button to show statustip instead of tooltip
     # Dynamically changing format dialog based on c/clive --hosts output
     # Total progressbar: use "%current / %total" instead of "%percentage"
     # Scan: hide column header
     # RSS: ditto

  Developer-visible changes:
   * Add: support for --exec-run (c/clive 0.4.6+/2.2.3+)
   * Tweak --hosts support
     # c/clive 0.4.6+/2.2.3+ print supported formats with --hosts
     # Bump prerequisites, see README
   * Cleanup README
     # Better description
     # Misc. other tweaks
   * abby.pro: include "QT += network xml"
     # See README for the changed build instructions

  Known-issues:
    * http://youtube.com/rss/user/(username)/videos.rss
      Links no longer work. Please see README ("Using abby").


Version 0.4.1
(July 11, 2009)

  User-visible changes:
   * Rollout experimental win32 binaries
   * Add: Help / Supported hosts
   * Fix: Preferences: various browse buttons
   * Tweak:
     1. Various messagebox texts
     2. Various status/tool tips
     3. Scan dialog (+new functions)
     4. RSS dialog
   * Enable/disable link list when download begins/ends
   * Change: Open "Add link" dialog if list is empty and "Download" is clicked
     1. This previously showed a messagebox telling user to add a link

  Developer-visible changes:
   * src/scandlg.cpp: Use static messagebox function instead


Version 0.4.0
(July 5, 2009)

  User-visible changes:
   * Add: Scan feature to scan *any* web pages for video links
     1. Supports regular Youtube links and embedded ones
     2. Above means that it can be used to grab videos from Youtube playlists
     3. Intended to replace clivescan utility (of the clive-utils project)
   * Add: Edit / Add / Paste (+key shortcut)
   * Add: Clear list (button +menu item)
   * Fix: RSS/Scan: Check for URL scheme in input link; insert if missing
   * Fix: RSS/Scan: Disabling HTTP proxy is now respected